--- a/taro/src/styles/style.scss
+++ b/taro/src/styles/style.scss
@@ -3,5 +3,36 @@
 }
 
 body {
-  background-color: rgba(2, 2, 34, 0.849);
+  margin: 0 0;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 0px;
+}
+
+.chose-game {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  height: 150px;
+  border: 1px solid black;
+  margin-bottom: 10px;
+}
+
+.three-game {
+  align-self: center;
+  width: 200px;
+  height: 130px;
+  background-color: rgb(247, 16, 16);
+  border-radius: 10px;
+  font-size: 20px;
+  text-align: center;
+}
+
+#gameField {
+  align-self: center;
+  max-width: 1000px;
 }
